syntax = "proto3";

package inventory;

service InventoryService {
  rpc GetProduct (GetProductRequest) returns (GetProductResponse);
  rpc ReserveStock (ReserveStockRequest) returns (ReserveStockResponse);
}

message GetProductRequest {
  string product_id = 1;
}

message GetProductResponse {
  string product_id = 1;
  string name = 2;
  int32 stock = 3;
}

message ReserveStockRequest {
  string product_id = 1;
  int32 quantity = 2;
  string order_id = 3;
}

message ReserveStockResponse {
  bool success = 1;
  string message = 2;
  int32 remaining_stock = 3;
}
